--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,8 +58,11 @@
         android:layout_marginTop="106dp"
         android:layout_marginEnd="101dp"
         android:ems="10"
+        android:gravity="center|clip_vertical"
         android:inputType="numberSigned|number|numberDecimal"
         android:minHeight="48dp"
+        android:textAlignment="gravity"
+        android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -73,8 +76,10 @@
         android:layout_marginTop="51dp"
         android:layout_marginEnd="101dp"
         android:ems="10"
+        android:gravity="center|clip_vertical"
         android:inputType="numberSigned|number|numberDecimal"
         android:minHeight="48dp"
+        android:textAlignment="gravity"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/op1"
@@ -110,6 +115,7 @@
         android:layout_marginTop="75dp"
         android:layout_marginEnd="119dp"
         android:gravity="center"
+        android:hint="@string/result"
         android:maxLength="10"
         android:textAlignment="gravity"
         android:textAllCaps="true"
