activity_main: updated margins

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
         android:id="@+id/root"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="74dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginEnd="72dp"
+        android:layout_marginBottom="44dp"
         android:onClick="btnRoot"
         android:text="@string/root"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -21,8 +21,8 @@
         android:id="@+id/perc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="71dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginBottom="44dp"
         android:onClick="btnPerc"
         android:text="@string/perc"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,8 +32,8 @@
         android:id="@+id/div"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="74dp"
-        android:layout_marginBottom="45dp"
+        android:layout_marginEnd="72dp"
+        android:layout_marginBottom="44dp"
         android:onClick="btnDiv"
         android:text="@string/div"
         app:layout_constraintBottom_toTopOf="@+id/root"
@@ -43,8 +43,8 @@
         android:id="@+id/mul"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="71dp"
-        android:layout_marginBottom="45dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginBottom="44dp"
         android:onClick="btnMul"
         android:text="@string/mul"
         app:layout_constraintBottom_toTopOf="@+id/perc"
@@ -55,7 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="106dp"
+        android:layout_marginTop="56dp"
         android:layout_marginEnd="101dp"
         android:ems="10"
         android:gravity="center|clip_vertical"
@@ -64,6 +64,7 @@
         android:textAlignment="gravity"
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Operand 1" />
@@ -73,7 +74,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="101dp"
-        android:layout_marginTop="51dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="101dp"
         android:ems="10"
         android:gravity="center|clip_vertical"
@@ -81,6 +82,7 @@
         android:minHeight="48dp"
         android:textAlignment="gravity"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/op1"
         tools:text="Operand 2" />
@@ -89,8 +91,8 @@
         android:id="@+id/add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="71dp"
-        android:layout_marginBottom="49dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginBottom="40dp"
         android:onClick="btnAdd"
         android:text="@string/add"
         app:layout_constraintBottom_toTopOf="@+id/mul"
@@ -100,8 +102,8 @@
         android:id="@+id/sub"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="74dp"
-        android:layout_marginBottom="49dp"
+        android:layout_marginEnd="72dp"
+        android:layout_marginBottom="40dp"
         android:onClick="btnSub"
         android:text="@string/sub"
         app:layout_constraintBottom_toTopOf="@+id/div"
@@ -112,7 +114,7 @@
         android:layout_width="210dp"
         android:layout_height="51dp"
         android:layout_marginStart="119dp"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="119dp"
         android:gravity="center"
         android:hint="@string/result"
@@ -122,6 +124,7 @@
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.69"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/op2"
         tools:text="Result" />
